--- a/app/views/stats/new.html.erb
+++ b/app/views/stats/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Stat</h1>
+<div id="statform">
+<h1>Add Game</h1>
+<p><%= link_to 'Add Game', new_stat_path %> | <%= link_to 'All Games', stats_path %></p>
 
 <%= render 'form' %>
 
 <%= link_to 'Cancel', stats_path %>
+</div>
