--- a/app/views/stats/show.html.erb
+++ b/app/views/stats/show.html.erb
@@ -1,197 +1,194 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
 <div id="teamlist">
-	<h1>Listing Teams</h1>    
-	<p><%= link_to 'Add Game', new_stat_path %></p>
+	<h1>Listing Stats</h1>    
+	<p><%= link_to 'Add Game', new_stat_path %> | <%= link_to 'All Games', stats_path %></p>
 	
 	<div id="teamA">
-		<% @shared.each do |s| %>       
-			<% @teamA.each do |ta|%>         
-				<% if ta.winA? %>
-					(W) <%= ta.teamA %><br />
+		<% @stats.each do |s| %>
+			<% if params[:id].to_s == s.id.to_s %>
+				<% if s.winA? %>
+					(W) <%= s.teamA %><br />
 				<% else %>
-					(L) <%= ta.teamA %><br /> 
+					(L) <%= s.teamA %><br /> 
 				<% end %>
-				<%= ta.pointsA %><br />
-				<% if ta.homeA? %>
+				<%= s.pointsA %><br />
+				<% if s.homeA? %>
 					(HOME)<br />
 				<% else %>
 					(AWAY)<br />
 				<% end %>
-				<%= ta.time_of_possesionA.strftime("%M:%S") %><br /> 
-	
-			<script type="text/javascript">
-			  google.load("visualization", "1", {packages:["gauge"]});
-			  google.setOnLoadCallback(drawChart);
-			  function drawChart() {
-			
-				var data = google.visualization.arrayToDataTable([
-				  ['Label', 'Value'],
-				  ['4th Down Rating', <%= ta.fourth_down_ratingA %>]
-				]);
-			
-				var options = {
-				  width: '70%', height: '70%',
-				  redFrom: 0, redTo: 20,
-				  greenFrom:80, greenTo: 100,
-				  minorTicks: 5
-				};
-			
-				var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeA1'));
-			
-				chart.draw(data, options);
-			  }
-			</script>
-			<div id="chart_divGaugeA1"></div>
-	
-			<script type="text/javascript">
-			  google.load("visualization", "1", {packages:["gauge"]});
-			  google.setOnLoadCallback(drawChart);
-			  function drawChart() {
-			
-				var data = google.visualization.arrayToDataTable([
-				  ['Label', 'Value'],
-				  ['Pass Efficiency', <%= ta.pass_efficiencyA %>]
-				]);
-			
-				var options = {
-				  width: '70%', height: '70%',
-				  redFrom: 0, redTo: 20,
-				  greenFrom:80, greenTo: 100,
-				  minorTicks: 5
-				};
-			
-				var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeA2'));
-			
-				chart.draw(data, options);
-			  }
-			</script>
-			<div id="chart_divGaugeA2"></div>
-			
-			<script type="text/javascript">
-			  google.load("visualization", "1", {packages:["corechart"]});
-			  google.setOnLoadCallback(drawChart);
-			  function drawChart() {
-			
-				var data = google.visualization.arrayToDataTable([
-				  ['Label', 'Value'],
-				  ['Runs', <%= ta.run_yardsA %>],
-				  ['Passes', <%= ta.pass_yardsA %>]
-				]);
-			
-				var options = {
-				  titleTextStyle: {color: 'black', fontSize: '25'},
-				  legend: 'none',
-				  pieSliceText: 'label',
-				  chartArea: {height: '70%', width: '70%'},
-				  fontSize: '18',
-				  slices: {	1: {offset: 0.1}
-				  }
-				};
-			
-				var chart = new google.visualization.PieChart(document.getElementById('chart_divA'));
-			
-				chart.draw(data, options);
-			  }
-			</script>
-			<div id="chart_divA"></div>
-			</div>
-			
-			<div id="teamB">
-			<% @teamB.each do |tb|%>   
-				<% if tb.winB? %>
-					<%= tb.teamB %> (W)<br />
-				<% else %>
-					<%= tb.teamB %> (L)<br /> 
-				<% end %>
-				<%= tb.pointsB %><br />
-				<% if tb.homeB? %>
-					(HOME)<br />
-				<% else %>
-					(AWAY)<br />
-				<% end %>
-				<%= tb.time_of_possesionB.strftime("%M:%S") %><br /> 
-	
-			<script type="text/javascript">
-			  google.load("visualization", "1", {packages:["gauge"]});
-			  google.setOnLoadCallback(drawChart);
-			  function drawChart() {
-			
-				var data = google.visualization.arrayToDataTable([
-				  ['Label', 'Value'],
-				  ['4th Down Rating', <%= tb.fourth_down_ratingB %>]
-				]);
-			
-				var options = {
-				  width: '70%', height: '70%',
-				  redFrom: 0, redTo: 20,
-				  greenFrom:80, greenTo: 100,
-				  minorTicks: 5
-				};
-			
-				var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeB1'));
-			
-				chart.draw(data, options);
-			  }
-			</script>
-			<div id="chart_divGaugeB1"></div>
-	
-			<script type="text/javascript">
-			  google.load("visualization", "1", {packages:["gauge"]});
-			  google.setOnLoadCallback(drawChart);
-			  function drawChart() {
-			
-				var data = google.visualization.arrayToDataTable([
-				  ['Label', 'Value'],
-				  ['Pass Efficiency', <%= tb.pass_efficiencyB %>]
-				]);
-			
-				var options = {
-				  width: '70%', height: '70%',
-				  redFrom: 0, redTo: 20,
-				  greenFrom:80, greenTo: 100,
-				  minorTicks: 5
-				};
-			
-				var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeB2'));
-			
-				chart.draw(data, options);
-			  }
-			</script>
-			<div id="chart_divGaugeB2"></div>
+				<%= s.time_of_possesionA.strftime("%M:%S") %><br /> 
+		
+				<script type="text/javascript">
+				  google.load("visualization", "1", {packages:["gauge"]});
+				  google.setOnLoadCallback(drawChart);
+				  function drawChart() {
 				
-			<script type="text/javascript">
-			  google.load("visualization", "1", {packages:["corechart"]});
-			  google.setOnLoadCallback(drawChart);
-			  function drawChart() {
-			
-				var data = google.visualization.arrayToDataTable([
-				  ['Label', 'Value'],
-				  ['Runs', <%= tb.run_yardsB %>],
-				  ['Passes', <%= tb.pass_yardsB %>]
-				]);
-			
-				var options = {
-				  titleTextStyle: {color: 'black', fontSize: '25'},
-				  legend: 'none',
-				  pieSliceText: 'label',
-				  chartArea: {height: '70%', width: '70%'},
-				  fontSize: '18',
-				  slices: {	1: {offset: 0.1}
+					var data = google.visualization.arrayToDataTable([
+					  ['Label', 'Value'],
+					  ['4th Down Rating', <%= s.fourth_down_ratingA %>]
+					]);
+				
+					var options = {
+					  width: '70%', height: '70%',
+					  redFrom: 0, redTo: 20,
+					  greenFrom:80, greenTo: 100,
+					  minorTicks: 5
+					};
+				
+					var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeA1'));
+				
+					chart.draw(data, options);
 				  }
-				};
-			
-				var chart = new google.visualization.PieChart(document.getElementById('chart_divB'));
-			
-				chart.draw(data, options);
-			  }
-			</script>
-			<div id="chart_divB"></div>
-	</div>
-	
-
-    <% end %>
-	<% end %>
-	<%= link_to 'Edit', edit_stat_path(s) %>
+				</script>
+				<div id="chart_divGaugeA1"></div>
+		
+				<script type="text/javascript">
+				  google.load("visualization", "1", {packages:["gauge"]});
+				  google.setOnLoadCallback(drawChart);
+				  function drawChart() {
+				
+					var data = google.visualization.arrayToDataTable([
+					  ['Label', 'Value'],
+					  ['Pass Efficiency', <%= s.pass_efficiencyA %>]
+					]);
+				
+					var options = {
+					  width: '70%', height: '70%',
+					  redFrom: 0, redTo: 20,
+					  greenFrom:80, greenTo: 100,
+					  minorTicks: 5
+					};
+				
+					var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeA2'));
+				
+					chart.draw(data, options);
+				  }
+				</script>
+				<div id="chart_divGaugeA2"></div>
+				
+				<script type="text/javascript">
+				  google.load("visualization", "1", {packages:["corechart"]});
+				  google.setOnLoadCallback(drawChart);
+				  function drawChart() {
+				
+					var data = google.visualization.arrayToDataTable([
+					  ['Label', 'Value'],
+					  ['Runs', <%= s.run_yardsA %>],
+					  ['Passes', <%= s.pass_yardsA %>]
+					]);
+				
+					var options = {
+					  titleTextStyle: {color: 'black', fontSize: '25'},
+					  legend: 'none',
+					  pieSliceText: 'label',
+					  chartArea: {height: '70%', width: '70%'},
+					  fontSize: '18',
+					  slices: {	1: {offset: 0.1}
+					  }
+					};
+				
+					var chart = new google.visualization.PieChart(document.getElementById('chart_divA'));
+				
+					chart.draw(data, options);
+				  }
+				</script>
+				<div id="chart_divA"></div>
+				</div>
+				
+				<div id="teamB">
+					<% if s.winB? %>
+						<%= s.teamB %> (W)<br />
+					<% else %>
+						<%= s.teamB %> (L)<br /> 
+					<% end %>
+					<%= s.pointsB %><br />
+					<% if s.homeB? %>
+						(HOME)<br />
+					<% else %>
+						(AWAY)<br />
+					<% end %>
+					<%= s.time_of_possesionB.strftime("%M:%S") %><br /> 
+		
+				<script type="text/javascript">
+				  google.load("visualization", "1", {packages:["gauge"]});
+				  google.setOnLoadCallback(drawChart);
+				  function drawChart() {
+				
+					var data = google.visualization.arrayToDataTable([
+					  ['Label', 'Value'],
+					  ['4th Down Rating', <%= s.fourth_down_ratingB %>]
+					]);
+				
+					var options = {
+					  width: '70%', height: '70%',
+					  redFrom: 0, redTo: 20,
+					  greenFrom:80, greenTo: 100,
+					  minorTicks: 5
+					};
+				
+					var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeB1'));
+				
+					chart.draw(data, options);
+				  }
+				</script>
+				<div id="chart_divGaugeB1"></div>
+		
+				<script type="text/javascript">
+				  google.load("visualization", "1", {packages:["gauge"]});
+				  google.setOnLoadCallback(drawChart);
+				  function drawChart() {
+				
+					var data = google.visualization.arrayToDataTable([
+					  ['Label', 'Value'],
+					  ['Pass Efficiency', <%= s.pass_efficiencyB %>]
+					]);
+				
+					var options = {
+					  width: '70%', height: '70%',
+					  redFrom: 0, redTo: 20,
+					  greenFrom:80, greenTo: 100,
+					  minorTicks: 5
+					};
+				
+					var chart = new google.visualization.Gauge(document.getElementById('chart_divGaugeB2'));
+				
+					chart.draw(data, options);
+				  }
+				</script>
+				<div id="chart_divGaugeB2"></div>
+					
+				<script type="text/javascript">
+				  google.load("visualization", "1", {packages:["corechart"]});
+				  google.setOnLoadCallback(drawChart);
+				  function drawChart() {
+				
+					var data = google.visualization.arrayToDataTable([
+					  ['Label', 'Value'],
+					  ['Runs', <%= s.run_yardsB %>],
+					  ['Passes', <%= s.pass_yardsB %>]
+					]);
+				
+					var options = {
+					  titleTextStyle: {color: 'black', fontSize: '25'},
+					  legend: 'none',
+					  pieSliceText: 'label',
+					  chartArea: {height: '70%', width: '70%'},
+					  fontSize: '18',
+					  slices: {	1: {offset: 0.1}
+					  }
+					};
+				
+					var chart = new google.visualization.PieChart(document.getElementById('chart_divB'));
+				
+					chart.draw(data, options);
+				  }
+				</script>
+				<div id="chart_divB"></div>
+		</div>
+		<%= link_to 'Edit', edit_stat_path(s) %>
+		<% else %>
+		<% end %>
 	<% end %>
 </div>
